k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: davinci-backend
  labels:
    name: davinci
